--- a/style.css
+++ b/style.css
@@ -34,3 +34,23 @@ nav a {
 nav a:first-child {
 	border-left: 0 none;
 }
+
+#main-container{
+	padding-top: 130px;
+}
+
+.main-section {
+	float: left;
+	width: 100%
+	max-width: 660px;
+	padding: 30px;
+	margin: 0 0 40px;
+	border: 1px solid;
+}
+
+.auth-image {
+	float: left;
+	width: 200px;
+	margin-top: 300;
+	margin-right:250px;
+}
