--- a/style.css
+++ b/style.css
@@ -72,12 +72,6 @@ h3, .sidebar h2 {
 	border: 1px solid #fff;
 }
 
-.auth-image {
-	float: left;
-	width: 200px;
-	margin-top: 300;
-	margin-right:250px;
-}
 
 .work{
 	position: relative;
@@ -86,6 +80,92 @@ h3, .sidebar h2 {
 	margin: 20px 0 25px;
 	overflow: auto;
 }
+
+
+/* portfolio page */
+.work{
+	position: relative;
+	float: left;
+	width: 274px;
+	margin: 20px 0 25px;
+	overflow: auto;
+}
+
+
+.work:nth-child(even) {
+   margin-right: 40 px;
+ }
+
+ .work img {
+ 	width: 100%;
+ 	border: 0 none;
+ 	opacity: 0.8;
+ }
+
+ .work h3{
+ 	position: absolute;
+ 	bottom: 20px;
+ 	width: 100%;
+ 	padding: 15px;
+ 	margin-bottom: 0;
+ 	font-weight: 200;
+ 	line-height: 20px;
+ 	color: white;
+ 	text-align: center;
+ 	background: purple;
+ 	border-bottom: 0;
+ }
+
+.auth-image {
+	float: left;
+	width: 200px;
+	height: auto;
+	margin-top: 10px;
+	margin-right: 25px;
+}
+
+/* contact page */
+.work{
+	position: relative;
+	float: left;
+	width: 274px;
+	margin: 20px 0 25px;
+	overflow: auto;
+}
+
+
+.work:nth-child(even) {
+   margin-right: 40 px;
+ }
+
+ .work img {
+ 	width: 100%;
+ 	border: 0 none;
+ 	opacity: 0.8;
+ }
+
+ .work h3{
+ 	position: absolute;
+ 	bottom: 20px;
+ 	width: 100%;
+ 	padding: 15px;
+ 	margin-bottom: 0;
+ 	font-weight: 200;
+ 	line-height: 20px;
+ 	color: white;
+ 	text-align: center;
+ 	background: purple;
+ 	border-bottom: 0;
+ }
+
+.auth-image {
+	float: left;
+	width: 200px;
+	height: auto;
+	margin-top: 10px;
+	margin-right: 25px;
+}
+
 footer{
 	padding: 30px;
 	clear: both;
