--- a/style.css
+++ b/style.css
@@ -1,10 +1,49 @@
+/* general */ 
+.container {
+	width: 100%;
+	max-width: 960px;
+	margin: 0 auto;
+	clear: both;
+}
+
+.container a {
+	text-decoration: none;
+	color: white;
+}
+
+h1,
+h2'
+h3,
+p {
+	margin-bottom: 20px;
+}
+
+p:last-child {
+	margin-bottom:0;
+}
+
+h1,
+h2,
+h3 {
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	font-weight: 700;
+	color: purple;
+}
+
+h3 {
+	padding-bottom: 20px;
+	font-size:30px;
+	line-height: 40px;
+	border-bottom: 3px solid greenyellow;
+}
+/* header */
 #masthead {
 	position: fixed;
 	width: 100%;
 	margin: 0 0 30px;
 	overflow: auto;
 	color: aqua;
-	background: blue;
+	background: pink;
 	border-bottom: 2px solid black;
 }
 
@@ -124,6 +163,7 @@ h3, .sidebar h2 {
 	margin-right: 25px;
 }
 
+
 /* contact page */
 .work{
 	position: relative;
@@ -170,8 +210,8 @@ footer{
 	padding: 30px;
 	clear: both;
 	font-size: 12px;
-	color: yellow;
+	color: purple;
 	text-align: center;
 	background: black;
-	border-top: 8px solid orange; 
+	border-top: 8px solid pink; 
 }
