--- a/style.css
+++ b/style.css
@@ -1,217 +1,233 @@
-/* general */ 
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: black;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+
+/* general */
 .container {
-	width: 100%;
-	max-width: 960px;
-	margin: 0 auto;
-	clear: both;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
 }
 
 .container a {
-	text-decoration: none;
-	color: white;
+    text-decoration: none;
+    color: white;
 }
 
 h1,
-h2'
+h2,
 h3,
 p {
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 p:last-child {
-	margin-bottom:0;
+    margin-bottom: 0;
 }
 
 h1,
 h2,
 h3 {
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-weight: 700;
-	color: purple;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
+    color: purple;
 }
 
-h3 {
-	padding-bottom: 20px;
-	font-size:30px;
-	line-height: 40px;
-	border-bottom: 3px solid greenyellow;
+h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid pink;
 }
+
+h2,
+h3 {
+    font-size: 22px;
+}
+
+
 /* header */
 #masthead {
-	position: fixed;
-	width: 100%;
-	margin: 0 0 30px;
-	overflow: auto;
-	color: aqua;
-	background: pink;
-	border-bottom: 2px solid black;
-}
-
-
-.container {
-	width: 100%;
-	max-width: 960px;
-	margin: 0 auto;
-	clear: both;
+    position: fixed;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: white;
+    background: pink;
+    border-bottom: 2px solid black;
 }
 
 nav {
-	float:right;
-	margin-top: 25px;
+    float: right;
+    margin-top: 25px;
 }
 
 nav a {
-	display: inline-block;
-	padding-left: 15px;
-	margin-left: 15px;
-	line-height: 18px;
-	color: white;
-	text-decoration: none;
-	border-left: 1px solid black;
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    color: white;
+    text-decoration: none;
+    border-left: 1px solid gray;
 }
 
-nav a: first-child {
-	border-left: 0 none;
+nav a:first-child {
+    border-left: 0 none;
+
 }
 
-.sidebar{
-	float: right;
-	width: 100%;
-	max-width:270px;
-	padding: 30px;
-	margin-bottom: 20px;
-	background: #fff
-	border: 1px solid #ddd;
+
+
+ /* sidebar */
+.sidebar {
+    float: right;
+    width: 100%;
+    max-width:270px;
+    padding: 30px;
+    margin-bottom: 20px;
+    background: #fff;
+    border: 1px solid #ddd
 }
 
 h3, .sidebar h2 {
-	padding-bottom: 20px;
-	margin-bottom: 15px;
-	line-height: 22px;
-	border-bottom: 2px solid #eee;
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+    border-bottom: 2px solid #eee;
 }
 
-.social{  
-	width: 62px;
-	height: 62px;
-	margin-top: 8px;
-	margin-right: 5px;
- }
+.social {
+    width: 62px;
+    height: 62px;
+    margin-top: 8px;
+    margin-right: 5px;
+}
 
-#main-container{
-	padding-top: 130px;
+
+
+
+/* main */
+#main-container {
+    padding-top: 130px;
 }
 
 .main-section {
-	float: left;
-	width: 100%
-	max-width: 660px;
-	padding: 30px;
-	margin: 0 0 40px;
-	border: 1px solid #fff;
+    float: left;
+    width: 100%;
+    max-width: 650px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
 }
 
 
-.work{
-	position: relative;
-	float: left;
-	width: 274px;
-	margin: 20px 0 25px;
-	overflow: auto;
-}
+
 
 
 /* portfolio page */
-.work{
-	position: relative;
-	float: left;
-	width: 274px;
-	margin: 20px 0 25px;
-	overflow: auto;
+.work {
+    position: relative;
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
 }
-
 
 .work:nth-child(even) {
-   margin-right: 40 px;
- }
-
- .work img {
- 	width: 100%;
- 	border: 0 none;
- 	opacity: 0.8;
- }
-
- .work h3{
- 	position: absolute;
- 	bottom: 20px;
- 	width: 100%;
- 	padding: 15px;
- 	margin-bottom: 0;
- 	font-weight: 200;
- 	line-height: 20px;
- 	color: white;
- 	text-align: center;
- 	background: purple;
- 	border-bottom: 0;
- }
-
-.auth-image {
-	float: left;
-	width: 200px;
-	height: auto;
-	margin-top: 10px;
-	margin-right: 25px;
+    margin-right: 40px;
 }
 
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+}
+
+.work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 200;
+    line-height: 20px;
+    color: white;
+    text-align: center;
+    background: purple;
+    border-bottom: 0;
+}
+
+.auth-image {
+    float: left;
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+}
 
 /* contact page */
-.work{
-	position: relative;
-	float: left;
-	width: 274px;
-	margin: 20px 0 25px;
-	overflow: auto;
+#contact-form ul {
+    margin-bottom: 20px;
+}
+
+#contact-form li{
+    margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+    display: block;
+    width: 100%;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid pink;
+}
+
+textarea {
+    height: 200px;
+}
+
+input[type=submit] {
+    padding: 10px 30px;
+    font-size: 10px;
+    color: white;
+    cursor: pointer;
+    background: pink;
+    border: none;
 }
 
 
-.work:nth-child(even) {
-   margin-right: 40 px;
- }
 
- .work img {
- 	width: 100%;
- 	border: 0 none;
- 	opacity: 0.8;
- }
 
- .work h3{
- 	position: absolute;
- 	bottom: 20px;
- 	width: 100%;
- 	padding: 15px;
- 	margin-bottom: 0;
- 	font-weight: 200;
- 	line-height: 20px;
- 	color: white;
- 	text-align: center;
- 	background: purple;
- 	border-bottom: 0;
- }
 
-.auth-image {
-	float: left;
-	width: 200px;
-	height: auto;
-	margin-top: 10px;
-	margin-right: 25px;
-}
 
-footer{
-	padding: 30px;
-	clear: both;
-	font-size: 12px;
-	color: purple;
-	text-align: center;
-	background: black;
-	border-top: 8px solid pink; 
+/* footer */
+footer {
+    padding: 30px;
+    clear: both;
+    font-size: 12px;
+    color: white;
+    text-align: center;
+    background: black;
+    border-top: 8px solid pink;
 }
