--- a/style.css
+++ b/style.css
@@ -66,6 +66,20 @@ h3 {
     border-bottom: 2px solid black;
 }
 
+#nameart {
+    float: left;
+    width: 250px;
+    height: 90px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: pink;
+    text-align: center;
+    text-decoration: none;
+    background: white;
+}
+
 nav {
     float: right;
     margin-top: 25px;
